<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cloud_background"
    tools:context=".Setting_and_Privacy">



    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/setpri_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setpri_title"

            android:textSize="25sp" />

        <Button
            android:id="@+id/to_setting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="@string/to_setting_btn"
            android:gravity=""
            android:textColor="#C3000000" />

        <Button
            android:id="@+id/to_change_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:gravity=""
            android:textColor="#C3000000"
            android:text="@string/to_change_account_btn" />

        <Button
            android:id="@+id/to_privacy_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:textColor="#C3000000"
            android:gravity=""
            android:text="@string/to_privacy_btn" />
    </LinearLayout>



    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/friend_setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friend_setting_title"
            android:textSize="25sp" />

        <Button
            android:id="@+id/to_friend_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:gravity=""
            android:text="@string/to_friend_list_btn"
            android:textColor="#C3000000" />

        <Button
            android:id="@+id/to_add_friend_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:gravity=""
            android:text="@string/to_add_friend_btn"
            android:textColor="#C3000000" />

        <Button
            android:id="@+id/to_group_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:gravity=""
            android:text="@string/to_group_btn"
            android:textColor="#C3000000" />


    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/other_setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other_setting_title"
            android:textSize="25sp" />

        <Button
            android:id="@+id/to_schedule_setting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:gravity=""
            android:text="@string/to_schedule_setting_btn"
            android:textColor="#C3000000" />

        <Button
            android:id="@+id/to_btn10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:gravity=""
            android:text="資料"
            android:textColor="#C3000000" />

        <Button
            android:id="@+id/to_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:gravity=""
            android:text="登出"
            android:textColor="#C3000000" />
    </LinearLayout>

</LinearLayout>